--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -19,3 +19,13 @@
 .header .cart-icon {
     width: 5%;
 }
+
+@media only screen and (max-width:768px) {
+    .header .search-bar {
+        width: 80%;
+    }
+
+    .header .cart-icon {
+        width: 15%;
+    }
+}
