--- a/src/Components/Sort/sort.scss
+++ b/src/Components/Sort/sort.scss
@@ -13,8 +13,55 @@
     height: 32px;
 }
 
+.mobile-sort {
+    display: none;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: left;
+}
+
+.modal-content>input {
+    margin: 8px 5px;
+}
+
+.modalBtn {
+    width: 100%;
+    height: 50px;
+}
+
+.modalBtn>div {
+    border: solid 1px #cccccc;
+    width: 30%;
+    float: left;
+    margin-top: 15px;
+    margin-left: 30px;
+    padding: 10px;
+    color: #4269EA;
+    text-align: center;
+}
+
 @media only screen and (max-width:768px) {
-    .desktop-sort {
-        display: none;
+    .mobile-sort {
+        display: block;
+        padding: 10px 0px;
     }
 }
