--- a/src/Pages/ShoppingListPage/shoppingList.scss
+++ b/src/Pages/ShoppingListPage/shoppingList.scss
@@ -16,7 +16,8 @@
 }
 
 @media only screen and (max-width:768px) {
-    .main-container .left-container {
+    .main-container .left-container,
+    .desktop-sort {
         display: none;
     }
 
