--- a/src/Components/Shopping/shopping.scss
+++ b/src/Components/Shopping/shopping.scss
@@ -11,7 +11,8 @@
 
 @media only screen and (max-width:768px) {
     .cartItem>div {
-        width: 45%;
+        width: 40%;
         margin: 5px;
+        height: 325px;
     }
 }
